vivado/LED_Controller/workspace/.metadata/.plugins/org.eclipse.cdt.ui/CoreMarks.build.log
18:04:32 **** Incremental Build of configuration Debug for project CoreMarks ****
make pre-build main-build 
make: Warning: File `src/subdir.mk' has modification time 4.2 s in the future
a9-linaro-pre-build-step
 
Building file: ../src/core_main.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/core_main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/core_main.d" -MT"src/core_main.o" -o "src/core_main.o" "../src/core_main.c"
../src/core_main.c: In function 'main':
../src/core_main.c:287:34: warning: format '%lu' expects argument of type 'long unsigned int', but argument 2 has type 'unsigned int' [-Wformat=]
  ee_printf("CoreMark Size    : %lu\n",(ee_u32)results[0].size);
                                  ^
../src/core_main.c:288:34: warning: format '%lu' expects argument of type 'long unsigned int', but argument 2 has type 'unsigned int' [-Wformat=]
  ee_printf("Total ticks      : %lu\n",(ee_u32)total_time);
                                  ^
../src/core_main.c:303:34: warning: format '%lu' expects argument of type 'long unsigned int', but argument 2 has type 'unsigned int' [-Wformat=]
  ee_printf("Iterations       : %lu\n",(ee_u32)default_num_contexts*results[0].iterations);
                                  ^
In file included from ../src/coremark.h:38:0,
                 from ../src/core_main.c:22:
../src/core_portme.h:65:25: error: 'FLAGS_STR' undeclared (first use in this function)
  #define COMPILER_FLAGS FLAGS_STR /* "Please put compiler flags here (e.g. -o3)" */
                         ^
../src/core_main.c:305:38: note: in expansion of macro 'COMPILER_FLAGS'
  ee_printf("Compiler flags   : %s\n",COMPILER_FLAGS);
                                      ^~~~~~~~~~~~~~
../src/core_portme.h:65:25: note: each undeclared identifier is reported only once for each function it appears in
  #define COMPILER_FLAGS FLAGS_STR /* "Please put compiler flags here (e.g. -o3)" */
                         ^
../src/core_main.c:305:38: note: in expansion of macro 'COMPILER_FLAGS'
  ee_printf("Compiler flags   : %s\n",COMPILER_FLAGS);
                                      ^~~~~~~~~~~~~~
make: *** [src/core_main.o] Error 1

18:04:32 Build Finished (took 117ms)

